[package]
name = "nsncd"
version = "1.3.0"
authors = [
    "Ben Linsay <ben.linsay@twosigma.com>",
    "Geoffrey Thomas <geoffrey.thomas@twosigma.com>",
    "Leif Walsh <leif.walsh@twosigma.com>",
]
edition = "2018"
description = "The name service non-caching daemon"
readme = "README.md"
repository = "https://github.com/twosigma/nsncd"
license = "Apache-2.0"

[dependencies]
anyhow = "^1.0"
atoi = "^0.4"
slog = "^2.7"
slog-async = "^2.7"
# Hold at 2.8.1: 2.9 upgrades to time 0.3 whose MSRV is too new
slog-term = "~2.8"
crossbeam-channel = "^0.5"
# Hold at 0.21: 0.22 MSRV is too new
nix = "^0.21.2"
num-derive = "^0.3"
num-traits = "^0.2"
# Hold at 0.3: 0.4 MSRV is too new
sd-notify = "~0.3"
# Indirect dependency, constrained for MSRV
once_cell = "~1.14"
static_assertions = "1.1.0"

[dev-dependencies]
criterion = "^0.3"
temp-env = "^0.3"

[[bench]]
name = "user"
harness = false
