[package]
name = "nsncd"
version = "1.4.1"
authors = [
    "Ben Linsay <ben.linsay@twosigma.com>",
    "Geoffrey Thomas <geoffrey.thomas@twosigma.com>",
    "Leif Walsh <leif.walsh@twosigma.com>",
]
edition = "2018"
description = "The name service non-caching daemon"
readme = "README.md"
repository = "https://github.com/twosigma/nsncd"
license = "Apache-2.0"

[dependencies]
anyhow = "^1.0"
atoi = "^2.0"
slog = "^2.7"
slog-async = "^2.8"
slog-term = "^2.9"
crossbeam-channel = "^0.5"
nix = { version = "^0.28", features = ["socket", "user"]}
num-derive = "^0.4"
num-traits = "^0.2"
sd-notify = "^0.4"
static_assertions = "1.1.0"
dns-lookup = "2.0.4"

[dev-dependencies]
criterion = "^0.7"
temp-env = "^0.3"

[[bench]]
name = "user"
harness = false
